[tool.poetry]
name = "oaiv"
version = "0.0.1"
description = "A minimalistic package implementing operations with blockchain (BTC \u0026 ETH)"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "oaiv"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"